--- a/TimerAssessment/TargetPerson/InputTargetPerson.storyboard
+++ b/TimerAssessment/TargetPerson/InputTargetPerson.storyboard
@@ -20,9 +20,8 @@
                                 <rect key="frame" x="35" y="323" width="344" height="250"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="対象者名を入力してください" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="S7c-Ut-GQf">
-                                        <rect key="frame" x="47" y="121" width="250" height="34"/>
+                                        <rect key="frame" x="40" y="121" width="264" height="34"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="37j-yp-bG7"/>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="34" id="Df6-tY-kwE"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -43,6 +42,7 @@
                                     <constraint firstItem="S7c-Ut-GQf" firstAttribute="top" secondItem="Vba-hT-h31" secondAttribute="bottom" constant="50" id="6Gg-Q1-BDe"/>
                                     <constraint firstItem="Vba-hT-h31" firstAttribute="centerX" secondItem="fc9-EY-mjk" secondAttribute="centerX" id="BaS-i1-mkE"/>
                                     <constraint firstItem="Vba-hT-h31" firstAttribute="top" secondItem="fc9-EY-mjk" secondAttribute="top" constant="50" id="W3K-zo-ubR"/>
+                                    <constraint firstAttribute="trailing" secondItem="S7c-Ut-GQf" secondAttribute="trailing" constant="40" id="f4p-eC-wf4"/>
                                     <constraint firstAttribute="height" constant="250" id="rgX-EA-Joy"/>
                                     <constraint firstItem="S7c-Ut-GQf" firstAttribute="centerX" secondItem="fc9-EY-mjk" secondAttribute="centerX" id="v1C-U1-t2C"/>
                                 </constraints>
