--- a/TimerAssessment/PastAssessment/PastAssessmentTableViewCell.xib
+++ b/TimerAssessment/PastAssessment/PastAssessmentTableViewCell.xib
@@ -14,7 +14,7 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pastAssessmentTableViewCell" rowHeight="176" id="KGk-i7-Jjw" customClass="PastAssessmentTableViewCell" customModule="TimerAssessment" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="425" height="176"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="425" height="176"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
@@ -41,8 +41,8 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイム" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DI3-5O-KXP">
                         <rect key="frame" x="50" y="10" width="180" height="50"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="180" id="3Z9-mp-65D"/>
-                            <constraint firstAttribute="height" constant="50" id="nmw-j9-rWq"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" identifier="result" id="3Z9-mp-65D"/>
+                            <constraint firstAttribute="height" constant="50" id="abp-43-pJ4"/>
                         </constraints>
                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="22"/>
                         <nil key="textColor"/>
@@ -51,8 +51,8 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="測定日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M0A-6J-m5q">
                         <rect key="frame" x="20" y="70" width="52" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="52" id="94I-Wv-GY7"/>
-                            <constraint firstAttribute="height" constant="30" id="EfK-D5-z0I"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="52" identifier="sokuteibi" id="94I-Wv-GY7"/>
+                            <constraint firstAttribute="height" constant="30" identifier="sokuteibi" id="EfK-D5-z0I"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
@@ -61,8 +61,8 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mNg-cI-lSu">
                         <rect key="frame" x="82" y="70" width="42" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="43P-YI-yyv"/>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="7te-8m-rUK"/>
+                            <constraint firstAttribute="height" constant="30" identifier="Created At Label" id="43P-YI-yyv"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" identifier="Created At Label" id="7te-8m-rUK"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
@@ -74,11 +74,10 @@
                     <constraint firstItem="DI3-5O-KXP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="E57-cb-DvB"/>
                     <constraint firstAttribute="trailing" secondItem="diW-fH-YUn" secondAttribute="trailing" constant="20" id="FQy-zv-bpg"/>
                     <constraint firstItem="M0A-6J-m5q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="TVh-6g-qYO"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="M0A-6J-m5q" secondAttribute="bottom" constant="10" id="VzY-I5-kJq"/>
                     <constraint firstItem="diW-fH-YUn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="cQJ-cQ-4dT"/>
                     <constraint firstItem="DI3-5O-KXP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ftF-Oc-i4w" customClass="Pa"/>
+                    <constraint firstItem="mNg-cI-lSu" firstAttribute="top" secondItem="M0A-6J-m5q" secondAttribute="top" id="kmh-X6-Qoc"/>
                     <constraint firstItem="mNg-cI-lSu" firstAttribute="leading" secondItem="M0A-6J-m5q" secondAttribute="trailing" constant="10" id="lbW-RQ-E7W"/>
-                    <constraint firstItem="mNg-cI-lSu" firstAttribute="top" secondItem="DI3-5O-KXP" secondAttribute="bottom" constant="10" id="vJh-nP-bOm"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
