--- a/TimerAssessment/Assessor/Base.lproj/Main.storyboard
+++ b/TimerAssessment/Assessor/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="whf-4D-oIB">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="detailButton" indentationWidth="10" reuseIdentifier="cell" id="22D-dW-XaJ" customClass="AssessorTableViewCell" customModule="TimerAssessment" customModuleProvider="target">
@@ -95,7 +95,7 @@
                             <constraint firstItem="0S7-ao-P6t" firstAttribute="trailing" secondItem="ehU-hx-Pbz" secondAttribute="trailing" constant="50" id="k5Y-7v-QoN"/>
                             <constraint firstItem="6h9-xF-xsp" firstAttribute="leading" secondItem="0S7-ao-P6t" secondAttribute="leading" constant="20" id="rb0-Uf-utu"/>
                             <constraint firstItem="0S7-ao-P6t" firstAttribute="bottom" secondItem="6h9-xF-xsp" secondAttribute="bottom" constant="20" id="s1G-Dr-OTO"/>
-                            <constraint firstItem="whf-4D-oIB" firstAttribute="bottom" secondItem="0S7-ao-P6t" secondAttribute="bottom" id="sjc-A2-jtV"/>
+                            <constraint firstItem="whf-4D-oIB" firstAttribute="bottom" secondItem="19P-LV-qBK" secondAttribute="bottom" id="sjc-A2-jtV"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="評価者" id="W3W-fb-nGg"/>
