--- a/TimerAssessment/TargetPerson/TargetPerson.storyboard
+++ b/TimerAssessment/TargetPerson/TargetPerson.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ECf-b5-uvp">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="detailButton" indentationWidth="10" reuseIdentifier="cell" id="A1I-FQ-Sso" customClass="TargetPersonTableViewCell" customModule="TimerAssessment" customModuleProvider="target">
@@ -83,7 +83,7 @@
                             <constraint firstItem="ECf-b5-uvp" firstAttribute="top" secondItem="x6e-tH-ddP" secondAttribute="top" id="aES-te-Nq2"/>
                             <constraint firstItem="ECf-b5-uvp" firstAttribute="leading" secondItem="x6e-tH-ddP" secondAttribute="leading" id="hot-Gv-NzK"/>
                             <constraint firstItem="x6e-tH-ddP" firstAttribute="bottom" secondItem="HDd-Bj-Zi4" secondAttribute="bottom" constant="20" id="ozO-K2-dFl"/>
-                            <constraint firstItem="ECf-b5-uvp" firstAttribute="bottom" secondItem="x6e-tH-ddP" secondAttribute="bottom" id="qm5-ie-FiW"/>
+                            <constraint firstItem="ECf-b5-uvp" firstAttribute="bottom" secondItem="CBn-f6-Sbm" secondAttribute="bottom" id="qm5-ie-FiW"/>
                             <constraint firstItem="ECf-b5-uvp" firstAttribute="trailing" secondItem="x6e-tH-ddP" secondAttribute="trailing" id="xQ0-lg-dD3"/>
                         </constraints>
                     </view>
