--- a/TimerAssessment/PastAssessment/PastAssessmentTableViewCell.xib
+++ b/TimerAssessment/PastAssessment/PastAssessmentTableViewCell.xib
@@ -11,18 +11,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pastAssessmentTableViewCell" rowHeight="176" id="KGk-i7-Jjw" customClass="PastAssessmentTableViewCell" customModule="TimerAssessment" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="425" height="176"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pastAssessmentTableViewCell" rowHeight="80" id="KGk-i7-Jjw" customClass="PastAssessmentTableViewCell" customModule="TimerAssessment" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="425" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="425" height="176"/>
+                <rect key="frame" x="0.0" y="0.0" width="425" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="diW-fH-YUn">
-                        <rect key="frame" x="325" y="20" width="80" height="80"/>
+                        <rect key="frame" x="345" y="8" width="60" height="64"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="80" id="4X5-ZT-un9"/>
-                            <constraint firstAttribute="width" constant="80" id="iFC-Ac-OwO"/>
+                            <constraint firstAttribute="height" constant="64" id="4X5-ZT-un9"/>
+                            <constraint firstAttribute="width" constant="60" id="iFC-Ac-OwO"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -39,45 +39,45 @@
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイム" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DI3-5O-KXP">
-                        <rect key="frame" x="50" y="10" width="180" height="50"/>
+                        <rect key="frame" x="12" y="8" width="200" height="32"/>
                         <constraints>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" identifier="result" id="3Z9-mp-65D"/>
-                            <constraint firstAttribute="height" constant="50" id="abp-43-pJ4"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" identifier="result" id="3Z9-mp-65D"/>
+                            <constraint firstAttribute="height" constant="32" id="abp-43-pJ4"/>
                         </constraints>
                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="22"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="測定日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M0A-6J-m5q">
-                        <rect key="frame" x="20" y="70" width="52" height="30"/>
+                        <rect key="frame" x="12" y="44" width="52" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="52" identifier="sokuteibi" id="94I-Wv-GY7"/>
-                            <constraint firstAttribute="height" constant="30" identifier="sokuteibi" id="EfK-D5-z0I"/>
+                            <constraint firstAttribute="height" constant="24" identifier="sokuteibi" id="EfK-D5-z0I"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mNg-cI-lSu">
-                        <rect key="frame" x="82" y="70" width="42" height="30"/>
+                        <rect key="frame" x="72" y="44" width="42" height="24"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" identifier="Created At Label" id="43P-YI-yyv"/>
+                            <constraint firstAttribute="height" constant="24" identifier="Created At Label" id="43P-YI-yyv"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" identifier="Created At Label" id="7te-8m-rUK"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="M0A-6J-m5q" firstAttribute="top" secondItem="DI3-5O-KXP" secondAttribute="bottom" constant="10" id="5Oe-Ld-eaf"/>
-                    <constraint firstItem="DI3-5O-KXP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="E57-cb-DvB"/>
+                    <constraint firstItem="M0A-6J-m5q" firstAttribute="top" secondItem="DI3-5O-KXP" secondAttribute="bottom" constant="4" id="5Oe-Ld-eaf"/>
+                    <constraint firstItem="DI3-5O-KXP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="E57-cb-DvB"/>
                     <constraint firstAttribute="trailing" secondItem="diW-fH-YUn" secondAttribute="trailing" constant="20" id="FQy-zv-bpg"/>
-                    <constraint firstItem="M0A-6J-m5q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="TVh-6g-qYO"/>
-                    <constraint firstItem="diW-fH-YUn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="cQJ-cQ-4dT"/>
-                    <constraint firstItem="DI3-5O-KXP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ftF-Oc-i4w" customClass="Pa"/>
+                    <constraint firstItem="M0A-6J-m5q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="TVh-6g-qYO"/>
+                    <constraint firstItem="diW-fH-YUn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="cQJ-cQ-4dT"/>
+                    <constraint firstItem="DI3-5O-KXP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="ftF-Oc-i4w" customClass="Pa"/>
                     <constraint firstItem="mNg-cI-lSu" firstAttribute="top" secondItem="M0A-6J-m5q" secondAttribute="top" id="kmh-X6-Qoc"/>
-                    <constraint firstItem="mNg-cI-lSu" firstAttribute="leading" secondItem="M0A-6J-m5q" secondAttribute="trailing" constant="10" id="lbW-RQ-E7W"/>
+                    <constraint firstItem="mNg-cI-lSu" firstAttribute="leading" secondItem="M0A-6J-m5q" secondAttribute="trailing" constant="8" id="lbW-RQ-E7W"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
